--- a/about.html
+++ b/about.html
@@ -1,13 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
+    <title>Document</title>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Restaurant Gaston Berger</title>
-    <link rel="icon" href="./img/logo.jpg" />
     <link rel="stylesheet" href="style.css">
-
 </head>
 <header>
     <div class="container grid">
@@ -23,6 +19,18 @@
     </nav></div>
 </header>
 <body>
-
+    <h1>A propos</h1>
+    <table>
+        <tr>
+            <th>Adresse</th>
+            
+        </tr>
+        <tr>
+            <td></td>
+        </tr>
+        <tr>
+            <td>10 Rue Gaston-Berger 59100 Ronchin</td>
+        </tr>
+    </table>
 </body>
 </html>
